add upload photo of recipe and interface for Admin cabinet

--- a/views/cabinetAdmin.ejs
+++ b/views/cabinetAdmin.ejs
@@ -1,6 +1,6 @@
 <% include layout/header.ejs %>
 <div class="cabinet">
-  <% include layout/nav_cabinet.ejs %>
+  <% include layout/nav_cabinetAdmin.ejs %>
   <p>
     THIS IS PERSONAL ADMIN CABINET!
     CHOOSE THE ACTION!
