--- a/views/layout/cabinetMenu.ejs
+++ b/views/layout/cabinetMenu.ejs
@@ -1,8 +1,13 @@
 <div class="cabinet__menu">
   <%= user.login %>
   <ul class="menu">
-    <li class="menu__item"><a href="/cabinet">Personal cabinet</a></li>
-    <li class="menu__item"><a href="#">item2</a></li>
-    <li class="menu__item"><a href="/api/auth/logout">Log out</a></li>
+    <% if (user.role == "admin") { %>
+      <li class="menu__item"><a href="/cabinet">Personal cabinet</a></li>
+      <li class="menu__item"><a href="/cabinetAdmin">Admin cabinet</a></li>
+      <li class="menu__item"><a href="/api/auth/logout">Log out</a></li>
+    <% } else { %>
+      <li class="menu__item"><a href="/cabinet">Personal cabinet</a></li>
+      <li class="menu__item"><a href="/api/auth/logout">Log out</a></li>
+    <% } %>
   </ul>
 </div>
