Add display accepted recipes on the main page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,54 +7,28 @@
       <h1 class="page__title_item">Popular recipes</h1>
       <img class="page__title_item" src="./images/serving-dish.png" alt="">
     </div>
+    <% for(var i = 0; i < recipes.length; i++) { %>
     <a href="#">
-      <div class="col-4 recipe-block">
+      <div class="col-4 recipe-block" id="recipe-block-<%= i %>">
+        <script>
+          var element = document.querySelector("#recipe-block-" + <%= i %>);
+          element.style.backgroundImage = "url(<%= recipes[i].photoPath %>)";
+        </script>
         <div class="recipe__title">
           <p class="recipe__title_item recipe__name">
-            Brownie
+            <%= recipes[i].title %>
           </p>
           <div class="recipe__title_item recipe__fav clearfix">
           </div>
         </div>
         <div class="recipe__descr">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+            <%= recipes[i].fullRecipe %>
           </p>
         </div>
       </div>
     </a>
-    <a href="#">
-      <div class="col-4 recipe-block">
-        <div class="recipe__title">
-          <p class="recipe__title_item recipe__name">
-            Brownie
-          </p>
-          <div class="recipe__title_item recipe__fav clearfix">
-          </div>
-        </div>
-        <div class="recipe__descr">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-          </p>
-        </div>
-      </div>
-    </a>
-    <a href="#">
-      <div class="col-4 recipe-block">
-        <div class="recipe__title">
-          <p class="recipe__title_item recipe__name">
-            Brownie
-          </p>
-          <div class="recipe__title_item recipe__fav clearfix">
-          </div>
-        </div>
-        <div class="recipe__descr">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-          </p>
-        </div>
-      </div>
-    </a>
+    <% } %>
   </div>
 </main>
 <% include layout/footer.ejs %>
